# drone_test

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-lambda.txt  sonar-project.properties
.github/actions/setup-python-uv/: action.yml
.github/workflows/: _ci-checks.yml  _deploy.yml  _edge-build.yml  _naming-validation.yml  post-merge.yml  pull-request.yml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
edge/: config.py  main.py
edge/cloud_connector/: connector.py  models.py
edge/image_pipeline/: models.py  pipeline.py
edge/mavlink_bridge/: bridge.py  models.py
edge/mission_executor/: executor.py  fail_safe.py  models.py
edge/obstacle_avoidance/: avoidance.py  models.py
edge_tests/unit/: test_config.py
edge_tests/unit/cloud_connector/: test_connector.py  test_models.py
edge_tests/unit/image_pipeline/: test_models.py  test_pipeline.py
edge_tests/unit/mavlink_bridge/: test_bridge.py  test_models.py
edge_tests/unit/mission_executor/: test_executor.py  test_fail_safe.py  test_models.py
edge_tests/unit/obstacle_avoidance/: test_avoidance.py  test_models.py
infra/: app.py  cdk.json
infra/stacks/: api_stack.py  iot_stack.py  monitoring_stack.py  processing_stack.py  storage_stack.py
infra_tests/: test_api_stack.py  test_app_wiring.py  test_iot_stack.py  test_monitoring_stack.py  test_processing_stack.py  test_storage_stack.py
integration_tests/: conftest.py  pytest.ini  runner.py
integration_tests/scenarios/: test_detection_endpoints.py  test_drone_endpoints.py  test_environment_endpoints.py  test_fleet_management_workflow.py  test_mission_lifecycle.py  test_simulation_scenarios.py  test_test_endpoints.py
integration_tests/scenarios/definitions/: basic_area_search.json  connectivity_loss.json  dynamic_replanning.json  extended_connectivity_loss.json  fleet_coordination.json  image_pipeline.json  obstacle_avoidance.json
scripts/: check_abbreviations.py  check_branch_name.sh  check_imports.py  check_naming_conventions.py  check_skip_comments.py
simulation/: README.md  docker-compose.yml  mosquitto.conf
simulation/config/: gazebo_camera.yaml  sitl_drone_1.parm  sitl_drone_2.parm  sitl_drone_3.parm
simulation/launch/: multi_drone.sh
simulation/worlds/: building_complex_01.world  urban_block_01.world
src/: config.py  constants.py  types.py
src/analysis/: analyzer.py  models.py  repository.py
src/environment/: models.py  repository.py
src/exceptions/: __init__.py  base.py  client_errors.py  handlers.py  server_errors.py
src/fleet/: command_dispatcher.py  models.py  repository.py
src/handlers/: drone_registrar.py  fleet_coordinator.py  image_analyzer.py  mission_controller.py  mission_planner.py  telemetry_processor.py
src/logging/: __init__.py  config.py  context.py  formatters.py  logger.py
src/logging/adapters/: lambda_adapter.py
src/mission/: models.py  planner.py  repository.py
src/telemetry/: models.py
src/utils/: dynamodb.py  s3.py
tests/: conftest.py
tests/unit/: test_config.py  test_constants.py  test_types.py
tests/unit/analysis/: test_analyzer.py  test_models.py  test_repository.py
tests/unit/environment/: test_models.py  test_repository.py
tests/unit/exceptions/: test_base.py  test_client_errors.py  test_handlers.py  test_server_errors.py
tests/unit/fleet/: test_command_dispatcher.py  test_models.py  test_repository.py
tests/unit/handlers/: test_drone_registrar.py  test_fleet_coordinator.py  test_image_analyzer.py  test_mission_controller.py  test_mission_planner.py  test_telemetry_processor.py
tests/unit/logging/: test_config.py  test_context.py  test_formatters.py  test_lambda_adapter.py  test_logger.py
tests/unit/mission/: test_models.py  test_planner.py  test_repository.py
tests/unit/telemetry/: test_models.py
tests/unit/utils/: test_dynamodb.py  test_s3.py
